fixed minor copy and layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -347,3 +347,9 @@ h1 {
 	}
 }
 
+@media only screen and (min-width : 320px) {
+	#header-names h1 {
+		font-size: 4rem;
+	}
+}
+
